syntax = "proto3";
package protobuf;
message StoreMessage {
  bytes data = 1;
  string messageType = 2;
}